--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h6 {
 
 
 p {
-    font-family: 'droid arabic kufi','Amiri' !important;
+    font-family: 'Noto Kufi Arabic', sans-serif; !important;
     font-size: 13px ;
     
     line-height: 25px;
